--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>ItzHaDao's pages</h1>
+<div style="display: flex; align-items: center;">
+  <img src="logo.png" alt="Logo" style="height: 60px; margin-right: 10px;">
+  <h1>ItzHaDao's pages</h1>
+</div>
 <p>Nothing here, comeback later</p>
 </body>
 </html>
